[gd_scene load_steps=33 format=2]

[ext_resource path="res://graphics/botones/returni.png" type="Texture" id=1]
[ext_resource path="res://graphics/botones/return.png" type="Texture" id=2]
[ext_resource path="res://graphics/botones/returns.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=4]
[ext_resource path="res://shaders/blur.shader" type="Shader" id=5]
[ext_resource path="res://graphics/botones/pause.png" type="Texture" id=6]
[ext_resource path="res://Font/BKANT.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://graphics/botones/BRv.png" type="Texture" id=8]
[ext_resource path="res://graphics/botones/BRvi.png" type="Texture" id=9]
[ext_resource path="res://graphics/botones/BRvs.png" type="Texture" id=10]
[ext_resource path="res://Font/DynamicFonts/Fuente20.tres" type="DynamicFont" id=11]
[ext_resource path="res://graphics/botones/volumen.png" type="Texture" id=12]
[ext_resource path="res://fondos/wallpaperbetter.com_1366x768.jpg" type="Texture" id=13]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )
shader_param/amount = 1.2

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="ImageTexture" id=7]

[sub_resource type="ImageTexture" id=8]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.4, 0.4, 0.4, 0.647059 )
border_width_top = 4
border_width_bottom = 4
border_color = Color( 0.713726, 0.67451, 0.67451, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="DynamicFont" id=14]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxFlat" id=17]
border_width_top = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 1 )
border_width_top = 3
border_width_right = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0, 0, 0, 1 )

[node name="control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Panel" parent="."]
anchor_right = 0.07
anchor_bottom = 0.1
margin_right = 12.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Botones" type="Panel" parent="."]
material = SubResource( 2 )
anchor_left = 0.02
anchor_top = 0.14
anchor_right = 0.3
anchor_bottom = 0.98
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Botones"]
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.2
custom_styles/panel = SubResource( 3 )

[node name="Configuraciones" type="TextureButton" parent="Botones/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="Botones/Panel/Configuraciones"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 11 )
text = "Configuraciones"
align = 1
valign = 1

[node name="Panel2" type="Panel" parent="Botones"]
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.4
custom_styles/panel = SubResource( 3 )

[node name="crearcodigo" type="TextureButton" parent="Botones/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="Botones/Panel2/crearcodigo"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 11 )
text = "CÃ³mo empezar a jugar"
align = 1
valign = 1

[node name="Panel3" type="Panel" parent="Botones"]
anchor_top = 0.45
anchor_right = 1.0
anchor_bottom = 0.6
custom_styles/panel = SubResource( 3 )

[node name="prejuego" type="TextureButton" parent="Botones/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="Botones/Panel3/prejuego"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 11 )
text = "Antes de jugar"
align = 1
valign = 1

[node name="Panel4" type="Panel" parent="Botones"]
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 0.8
custom_styles/panel = SubResource( 3 )

[node name="juego" type="TextureButton" parent="Botones/Panel4"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Botones/Panel4/juego"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 11 )
text = "Jugar"
align = 1
valign = 1

[node name="Reproductor" type="Panel" parent="."]
anchor_left = 0.35
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.75
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video" type="Panel" parent="Reproductor"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="Reproductor/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
bus = "Voz"

[node name="Panel2" type="Panel" parent="Reproductor/Video"]
anchor_left = 0.05
anchor_top = 0.85
anchor_right = 0.95
anchor_bottom = 0.9
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Reproductor/Video/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_icons/grabber_disabled = SubResource( 7 )
custom_icons/grabber_highlight = SubResource( 8 )
custom_styles/slider = SubResource( 9 )
custom_styles/grabber_area = SubResource( 10 )
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Reproductor/Video"]
anchor_left = 0.03
anchor_top = 0.9
anchor_right = 0.95
anchor_bottom = 1.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Reproductor/Video/Panel"]
anchor_right = 0.06
anchor_bottom = 1.0
custom_styles/panel = SubResource( 12 )

[node name="pausa" type="TextureButton" parent="Reproductor/Video/Panel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Reproductor/Video/Panel"]
anchor_left = 0.06
anchor_right = 0.3
anchor_bottom = 1.0
custom_styles/panel = SubResource( 13 )

[node name="Label" type="Label" parent="Reproductor/Video/Panel/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 14 )
valign = 1

[node name="Panel3" type="Panel" parent="Reproductor/Video/Panel"]
anchor_left = 0.35
anchor_top = 0.1
anchor_right = 0.42
anchor_bottom = 0.9
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="Reproductor/Video/Panel/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="Reproductor/Video/Panel"]
anchor_left = 0.42
anchor_right = 0.6
anchor_bottom = 1.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Reproductor/Video/Panel/Panel4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/slider = SubResource( 17 )
custom_styles/grabber_area = SubResource( 18 )
min_value = -40.0
max_value = 6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sin video" type="Panel" parent="Reproductor"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 19 )
[connection signal="pressed" from="Button/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Botones/Panel/Configuraciones" to="." method="_on_Configuraciones_pressed"]
[connection signal="pressed" from="Botones/Panel2/crearcodigo" to="." method="_on_crearcodigo_pressed"]
[connection signal="pressed" from="Botones/Panel3/prejuego" to="." method="_on_prejuego_pressed"]
[connection signal="pressed" from="Botones/Panel4/juego" to="." method="_on_juego_pressed"]
[connection signal="finished" from="Reproductor/Video/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="Reproductor/Video/Panel/Panel/pausa" to="." method="_on_pausa_pressed"]
[connection signal="value_changed" from="Reproductor/Video/Panel/Panel4/HSlider" to="." method="_on_HSlider_value_changed"]
